[workspace]
resolver = "2"
members = [
    "api",
    "db",
    "monitor",
    "orchestrator",
    "server",
    "transporter",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["St. Jude Rust Labs"]
homepage = "https://github.com/stjude-rust-labs/planetary"
repository = "https://github.com/stjude-rust-labs/planetary"
rust-version = "1.89.0"

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["query", "typed-header"] }
base64 = "0.22.1"
bon = "3.7.0"
byte-unit = "5.1.6"
bytes = "1.10.1"
cfg-if = "1.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.3", features = ["tracing"] }
cloud-copy = { version = "0.5.0", features = ["cli"] }
colored = "3.0.0"
crc64fast-nvme = "1.2.0"
diesel = { version = "2.2.12", features = ["postgres", "pq-src", "chrono"] }
diesel-async = { version = "0.6.1", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_migrations = "2.2.0"
futures = "0.3.31"
glob = "0.3.3"
hex = "0.4.3"
hmac = "0.12.1"
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
kube = { version = "1.1.0", features = ["runtime"] }
opool = "0.1.1"
pin-project-lite = "0.2.16"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["stream"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde-xml-rs = "0.8.1"
serde_json = "1.0.142"
sha2 = "0.10.9"
shlex = "1.3.0"
tempfile = "3.20.0"
tes = { version = "0.9.0", features = ["serde"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tokio-retry2 = "0.5.7"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["io"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-indicatif = "0.3.12"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
